// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should parse component rule 1 should parse empty props 1`] = `
"font-size: 48px;
:focus {
  width: 30px;
}
@media screen and (max-width: 93em) {
  width: 3px;
}
@media screen and (max-width: 80em) {
  width: 2px;
}
@media screen and (max-width: 50em) {
  width: 100%;
}
@media screen and (max-width: 93em) {
  :hover {
    width: 30px;
  }
}
@media screen and (max-width: 80em) {
  :hover {
    width: 20px;
  }
}
@media screen and (max-width: 50em) {
  :hover {
    width: 10px;
  }
}"
`;

exports[`should parse component rule 2 should parse common props 1`] = `
"font-size: 96px;
&:hover {
  color: #f50057;
}
:focus {
  width: 10px;
}
@media screen and (max-width: 93em) {
  width: 13px;
}
@media screen and (max-width: 80em) {
  width: 2px;
}
@media screen and (max-width: 50em) {
  width: 11px;
}
@media screen and (max-width: 93em) {
  :hover {
    width: 130px;
  }
}
@media screen and (max-width: 80em) {
  :hover {
    width: 120px;
  }
}
@media screen and (max-width: 50em) {
  :hover {
    width: 110px;
  }
}"
`;
